src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/visibilitySpecifiers.sol
contract c {
  uint private a;
  uint internal b;
  uint public c;
  uint d;
  function f() {}
  function f_priv() private {}
  function f_public() public {}
  function f_internal() internal {}
}