src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/multipleVisibilitySpecifiers.sol
contract c {
  uint private internal a;
}